src/App.scss
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
}

.app {
  text-align: center;
  background-size: cover;
  background-position: center;
}
h1,
h2,
h3 {
  font-family: 'Fascinate Inline';
}

h1 {
  margin-bottom: 20px;
  font-size: 40px;
  // color: rgba(#fff, 0.8);
  background-image: linear-gradient(180deg, #fff, #8bc34a);
  background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: 100%;
  filter: drop-shadow(2px 2px #689f38);
}

.welcome {
  font-size: 54px;
}

.btn {
  border: none;
  outline: none;
  border-radius: 20px;
  padding: 12px 24px;
  background-image: radial-gradient(70% 70% at 84% 18%, #25c2d6 0%, #00bcd4 100%);
  // background-image: linear-gradient(180deg, #fff, #ffcc91);
  // border: 2px solid #d38558;
  // box-shadow: 0 5px 10px rgba(#000, 0.25);
  color: #fff;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 0.5px;
  transition: all 0.5s ease-in-out;
  cursor: pointer;
  display: block;
  margin: 10px auto;
  &:hover,
  &:focus {
    opacity: 0.95;
    box-shadow: 0 10px 10px rgba(#00bcd4, 0.2);
  }
  &.danger {
    background-image: radial-gradient(70% 70% at 84% 18%, #ef6a61 0%, #f44336 100%);
  }
  &.success {
    background-image: radial-gradient(70% 70% at 84% 18%, #8bc34a 0%, #4caf50 100%);
  }
}

.btn-group {
  display: flex;
  justify-content: center;
  .btn {
    margin: 5px;
  }
}

.result {
  width: 400px;
  height: 320px;
  background-color: rgba(#fff, 0.18);
  border-radius: 12px;
  margin: 20px auto;
  padding: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  .score {
    font-weight: bold;
    text-transform: uppercase;
    margin: 20px;
    color: #fff;
  }
}
.quiz-container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  min-height: 100vh;
  padding: 20px;
}

